feat/products, implementação do modulo dos produtos.
