# src/server.js
@@ -7,6 +7,7 @@ import swaggerJsDoc from "../swagger.json" assert { type: "json" };
 import authRouter from "./auth/auth.router.js";
 import userRouter from "./users/user.router.js";
 import adminRouter from "./admin/admin.router.js";
+import productRouter from "./products/product.router.js";
 
 const app = express();
 
@@ -16,6 +17,7 @@ app.use(express.urlencoded({ extended: true }));
 app.use("/", authRouter);
 app.use("/users", userRouter);
 app.use('/admin', adminRouter)
+app.use("/products", productRouter);
 app.use("/api", swaggerUi.serve, swaggerUi.setup(swaggerJsDoc));
 
 mongoConfig();
